--- a/app/src/main/res/layout/admin_decoration_item.xml
+++ b/app/src/main/res/layout/admin_decoration_item.xml
@@ -8,6 +8,8 @@
     android:layout_margin="5dp"
     android:layout_marginBottom="25dp">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +32,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_decore_order_id"
+                android:id="@+id/admin_tv_decore_order_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -55,7 +57,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_set_id"
+                android:id="@+id/admin_tv_set_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -80,7 +82,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_set_name"
+                android:id="@+id/admin_tv_set_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -105,7 +107,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_order_price"
+                android:id="@+id/admin_tv_order_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -129,7 +131,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_date_event"
+                android:id="@+id/admin_tv_date_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -153,7 +155,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_requiring"
+                android:id="@+id/admin_tv_requiring"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -179,7 +181,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_event_address"
+                android:id="@+id/admin_tv_event_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -204,7 +206,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_order_status"
+                android:id="@+id/admin_tv_order_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -228,7 +230,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/tv_payment_status"
+                android:id="@+id/admin_tv_payment_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -237,14 +239,69 @@
                 android:textSize="20sp" />
 
         </LinearLayout>
-        <Button
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel Order"
-            android:id="@+id/button_to_cancel_decore_order"/>
+            android:text="Change Order Status"
+            android:textColor="@color/black"
+            android:background="@android:color/holo_orange_dark"></TextView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Accepted"
+                android:backgroundTint="@android:color/holo_green_light"
+                android:id="@+id/admin_accepted"></Button>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rejected"
+                android:id="@+id/admin_rejected"
+                android:backgroundTint="@android:color/holo_red_dark"></Button>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Completed"
+                android:id="@+id/admin_completed"
+                android:backgroundTint="@android:color/holo_blue_bright"></Button>
+
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Change Order Payment Status"
+            android:textColor="@color/black"
+            android:background="@android:color/holo_orange_dark"></TextView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Done"
+                android:backgroundTint="@android:color/holo_green_light"
+                android:id="@+id/admin_done"></Button>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Failed"
+                android:id="@+id/admin_failed"
+                android:backgroundTint="@android:color/holo_red_dark"></Button>
+
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
