--- a/app/src/main/res/layout/userlistitem.xml
+++ b/app/src/main/res/layout/userlistitem.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_red_dark"
+            android:background="@android:color/holo_orange_dark"
             android:text="User Id :"
             android:textSize="25dp"
             android:textColor="@color/black"
