--- a/app/src/main/res/layout/activity_order_cake_by_intent.xml
+++ b/app/src/main/res/layout/activity_order_cake_by_intent.xml
@@ -198,6 +198,39 @@
                         android:layout_width="139dp"
                         android:layout_height="37dp"
                         android:layout_gravity="center" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/holo_blue_bright"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
+                        android:text="Payment Option"></TextView>
+                    <RadioGroup
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/pay_upi"
+                            android:onClick="onRadioButtonClicked"
+                            android:text="Pay With UPI"></RadioButton>
+
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/pay_on_delievery"
+                            android:onClick="onRadioButtonClicked"
+                            android:text="Pay On Delievery"></RadioButton>
+
+                    </RadioGroup>
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Pay Now"
+                        android:id="@+id/pay_now"
+                        android:backgroundTint="@android:color/holo_green_light"></Button>
 
                     <Button
                         android:layout_width="match_parent"
