--- a/app/src/main/res/layout/activity_decore_event_by_intent.xml
+++ b/app/src/main/res/layout/activity_decore_event_by_intent.xml
@@ -35,170 +35,160 @@
         android:layout_marginBottom="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="334dp"
-            android:layout_height="280dp"
-            android:layout_gravity="center_vertical"
-            android:id="@+id/imageinintent"
-           />
-        <TextView
-            android:id="@+id/set_name"
-            android:layout_width="match_parent"
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Set Name"
-            android:textStyle="bold"
-            android:layout_marginTop="25dp"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textAlignment="center"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:id="@+id/set_code"
-            android:textStyle="bold"
-            android:layout_marginTop="25dp"
-            android:text="Set Code"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            />
-        <TextView
-            android:id="@+id/set_Price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Price Charge"
-            android:textStyle="bold"
-            android:layout_marginTop="25dp"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textAlignment="center"/>
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/set_dis"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="Description Box"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-             />
+            <ImageView
+                android:id="@+id/imageinintent"
+                android:layout_width="334dp"
+                android:layout_height="280dp"
+                android:layout_gravity="center_vertical" />
 
-
-
-        <RelativeLayout
-
-            android:id="@+id/relative_layout_for_calender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Date Of Your Event"/>
-
-
-         <DatePicker
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="-25dp"
-                            android:scaleX=".9"
-                            android:scaleY=".7"
-                            android:calendarTextColor="#D500F9"
-                            android:datePickerMode="calendar"
-                            android:id="@+id/datePicker" />
-
-                        <Button
-                            android:text="Get This Date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/datePicker"
-                            android:layout_marginTop="-25dp"
-                            android:layout_centerHorizontal="true"
-                            android:id="@+id/button_to_display_date" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/button_to_display_date"
-                            android:layout_marginTop="20dp"
-                            android:textSize="24sp"
-
-                            android:id="@+id/textview_for_date_text"
-                            android:gravity="center"/>
-
-        </RelativeLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Requirement For -"
-            android:textStyle="bold"
-            android:textSize="15dp"
-            android:textColor="@color/black"/>
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <RadioButton android:id="@+id/radio_1"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/set_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1 Day "
+                android:layout_marginTop="25dp"
+                android:gravity="center"
+                android:text="Set Name"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-                android:onClick="onRadioButtonClicked"/>
-            <RadioButton android:id="@+id/radio_2"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/set_code"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="2 Days"
-                android:onClick="onRadioButtonClicked"/>
-            <RadioButton android:id="@+id/radio_3"
-                android:layout_width="wrap_content"
+                android:layout_marginTop="25dp"
+                android:gravity="center"
+                android:text="Set Code"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/set_Price"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="3 Day "
-                android:onClick="onRadioButtonClicked"/>
-        </RadioGroup>
+                android:layout_marginTop="25dp"
+                android:gravity="center"
+                android:text="Price Charge"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/editText_for_add"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Enter Address Of Event  " />
-        <ProgressBar
-            android:id="@+id/progressBar_decore"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="139dp"
-            android:layout_height="37dp"
-            android:layout_gravity="center" />
+            <TextView
+                android:id="@+id/set_dis"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Description Box"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:layout_marginTop="25dp"
-            android:id="@+id/button_for_order_decore_set"
-            android:text="Order Decoration Set"/>
 
-    </LinearLayout>
+            <RelativeLayout
+
+                android:id="@+id/relative_layout_for_calender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select Date Of Your Event" />
+
+
+                <DatePicker
+                    android:id="@+id/datePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="-25dp"
+                    android:calendarTextColor="#D500F9"
+                    android:datePickerMode="calendar"
+                    android:scaleX=".9"
+                    android:scaleY=".7" />
+
+                <Button
+                    android:id="@+id/button_to_display_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/datePicker"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="-25dp"
+                    android:text="Get This Date" />
+
+                <TextView
+                    android:id="@+id/textview_for_date_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/button_to_display_date"
+                    android:layout_marginTop="20dp"
+
+                    android:gravity="center"
+                    android:textSize="24sp" />
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Requirement For -"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spinner1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/btn_dropdown"
+                android:spinnerMode="dropdown" />
+
+            <EditText
+                android:id="@+id/editText_for_add"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:ems="10"
+                android:hint="Enter Address Of Event  "
+                android:inputType="textPersonName" />
+
+            <ProgressBar
+                android:id="@+id/progressBar_decore"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="139dp"
+                android:layout_height="37dp"
+                android:layout_gravity="center" />
+
+            <Button
+                android:id="@+id/button_for_order_decore_set"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Order Decoration Set"
+                android:textSize="30sp" />
+
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
-
-
     </GridLayout>
+
     </LinearLayout>
+
 
 
 </ScrollView>
