--- a/app/src/main/res/layout/activity_catering_by_intent.xml
+++ b/app/src/main/res/layout/activity_catering_by_intent.xml
@@ -547,34 +547,12 @@
             android:text="For How Many Days You Are Requiring Catering Service ?" />
 
 
-        <RadioGroup
+        <Spinner
+            android:id="@+id/spinner1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <RadioButton android:id="@+id/radio_day_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1 Day"
-
-                android:onClick="onRadioButtonClicked"/>
-            <RadioButton android:id="@+id/radio_day_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2 Days"
-                android:onClick="onRadioButtonClicked"/>
-            <RadioButton android:id="@+id/radio_day_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="3 Days"
-                android:onClick="onRadioButtonClicked"/>
-            <RadioButton android:id="@+id/radio_day_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4 Days"
-                android:onClick="onRadioButtonClicked"/>
-        </RadioGroup>
-
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
 
         <EditText
             android:id="@+id/address_catering"
@@ -590,6 +568,40 @@
             android:layout_width="139dp"
             android:layout_height="37dp"
             android:layout_gravity="center" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_bright"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:text="Payment Option"></TextView>
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/pay_upi_catering"
+                android:onClick="onRadioButtonClicked"
+                android:text="Pay With UPI"></RadioButton>
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/pay_on_delievery_catering"
+                android:onClick="onRadioButtonClicked"
+                android:text="Pay On Service"></RadioButton>
+
+        </RadioGroup>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pay Now"
+            android:id="@+id/pay_now_catering"
+            android:backgroundTint="@android:color/holo_green_light"></Button>
+
 
         <Button
             android:layout_width="match_parent"
