--- a/app/src/main/res/layout/activity_order_cake_by_intent.xml
+++ b/app/src/main/res/layout/activity_order_cake_by_intent.xml
@@ -232,6 +232,14 @@
                         android:id="@+id/pay_now"
                         android:backgroundTint="@android:color/holo_green_light"></Button>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:text=""
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:id="@+id/result_tv"></TextView>
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
